--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
         <header>
             <div class="navigation"><nav> 
-                <a href="index.html">About</a> | <a href="">Portfolio</a> | <a href="contact.html">Contact</a>
+                <a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a>
             </nav></div>
     
             <div id="nameHeading">
